syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "github.com/gford1000-go/protobuf/types/value";

enum ValueListType {
  Unknown = 0;
  Interface = 999;
  Bool = 1;
  Bytes = 2;
  Double = 3;
  Float = 4;
  Int32 = 5;
  Int64 = 6;
  UInt32 = 7;
  UInt64 = 8;
  SInt32 = 9;
  SInt64 = 10;
  Fixed32 = 11;
  Fixed64 = 12;
  Time = 13;
  Duration = 14;
  ValueMap = 15;
  ValueList = 16;
  PtrBool = 17;
  PtrDouble = 18;
  PtrFloat = 19;
  PtrInt32 = 20;
  PtrInt64 = 21;
  PtrUInt32 = 22;
  PtrUInt64 = 23;
  PtrSInt32 = 24;
  PtrSInt64 = 25;
  PtrFixed32 = 26;
  PtrFixed64 = 27;
  PtrTime = 28;
  PtrDuration = 29;
  String = 30;
  PtrString = 31;
}

message Value {
  message ValueMap {
    map<string, Value> m = 1;
  }
  message ValueList {
    repeated Value v = 1;
    ValueListType t = 2;
  }

  oneof v {
    bool isNull = 1;
    bytes x = 2;
    bool b = 3;
    bool pb = 4;
    string s = 5;
    string ps = 6;
    double d = 7;
    double pd = 8;
    float f = 9;
    float pf = 10;
    int32 i32 = 11;
    int32 pi32 = 12;
    int64 i64 = 13;
    int64 pi64 = 14;
    uint32 u32 = 15;
    uint32 pu32 = 16;
    uint64 u64 = 17;
    uint64 pu64 = 18;
    sint32 s32 = 19;
    sint32 ps32 = 20;
    sint64 s64 = 21;
    sint64 ps64 = 22;
    fixed32 f32 = 23;
    fixed32 pf32 = 24;
    fixed64 f64 = 25;
    fixed64 pf64 = 26;
    google.protobuf.Timestamp t = 27;
    google.protobuf.Timestamp pt = 28;
    int64 dur = 29;
    int64 pdur = 30;    
    ValueMap m = 31;
    ValueList l = 32;
  }
}



